--- a/news/2014/06/30/001.mdx
+++ b/news/2014/06/30/001.mdx
@@ -1,9 +1,10 @@
 ---
-slug: "goldenstate-college-joins-in-the-celebration-of-cheds-20th-anniversary-wins-the-gold-in-the-booth-competition"
-title: "Goldenstate College Joins in the Celebration of CHED’s 20th Anniversary, Wins the Gold in the Booth Competition"
-description: "Goldenstate joined CHED RO XII’s 20th anniversary celebration with HEIs across Region XII..."
+slug: "goldenstate-joins-ched-region-12-20th-anniversary-celebration"
+title: "Goldenstate Joins CHED Region 12 20th Anniversary Celebration"
+description: "Goldenstate College actively participated in the 20th anniversary celebration of the Commission on Higher..."
 author: "Goldenstate"
 date: "2014-06-30"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/ched-2014-01.jpg"
 ---
 
 Goldenstate College actively participated in the 20th anniversary celebration of the Commission on Higher Education (CHED) Region XII, held on May 19–20, 2014, in Koronadal City. The milestone event marked the first time CHED held a regional celebration involving higher education institutions (HEIs) and state universities across Region XII.
