--- a/news/2014/03/02/001.mdx
+++ b/news/2014/03/02/001.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "goldenstate-holds-simultaneous-seminars-for-students-upgrading"
-title: "goldenstate holds simultaneous seminars for students upgrading"
-description: "In its ardent desire and golden commitment to equip students with the latest updates on..."
+title: "Goldenstate Holds Simultaneous Seminars for Students Upgrading"
+description: "Goldenstate College of General Santos City held simultaneous seminars on February 8–9, 2014, at its..."
 author: "Goldenstate"
 date: "2014/03/02"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-seminar-2014-01.jpg"
 ---
 
 Goldenstate College of General Santos City held simultaneous seminars on February 8–9, 2014, at its campus to update students on current industry practices and technologies. Experts from Manila and DepEd General Santos led the sessions.
