--- a/news/2014/03/16/001.mdx
+++ b/news/2014/03/16/001.mdx
@@ -1,10 +1,12 @@
 ---
 slug: "goldenstate-college-hosts-educators-appreciation-night"
-title: "goldenstate college hosts educators’ appreciation night"
-description: "In age of dazzling technological advances and rapidly evolving knowledge, students must be able to..."
+title: "Goldenstate College Hosts Educators’ Appreciation Night"
+description: "Goldenstate College held its Educators’ Appreciation Night on March 14, 2014, at its campus in..."
 author: "Goldenstate"
 date: "2014/03/16"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/educators-night-2014-01.jpg"
 ---
+
 Goldenstate College held its Educators’ Appreciation Night on March 14, 2014, at its campus in Region XII. The event aimed to honor teachers and educational stakeholders for their dedication in preparing students to face an increasingly challenging academic environment shaped by rapid technological advances.
 
 The program opened with remarks from College President Josie Yap-Tirador, MBA, followed by the master of ceremonies, Mr. Ferdinand G. Alcantara, MAED, who acknowledged the presence of guests, stakeholders, principals, and directors from the region.
