--- a/news/2013/10/20/001.mdx
+++ b/news/2013/10/20/001.mdx
@@ -1,103 +1,46 @@
 ---
 slug: "goldenstate-intrams-13-more-successful-and-dazzling-than-ever"
 title: "Goldenstate Intrams ’13: More Successful and Dazzling Than Ever"
-description: "General Santos City – it was a picture of almost perfect execution, ornamented with beauty, agility, humility, and magnanimity..."
+description: "Goldenstate College of General Santos City concluded its five-day Intramurals 2013 celebration from September 23..."
 author: "Goldenstate"
 date: "2013/10/20"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-01.jpg"
 ---
 
+Goldenstate College of General Santos City concluded its five-day Intramurals 2013 celebration from September 23 to 27 at the General Santos City Sports Complex and SM City Gensan Trade Hall. The event combined spirited competitions, cultural showcases, and student camaraderie, marking one of the most vibrant school celebrations in recent history.
 
-# Goldenstate Intrams ’13: More Successful and Dazzling Than Ever
+The highlight was Division 4 (BSHRM) emerging as the overall champion, dominating both sporting events and pageant categories.
 
-**GENERAL SANTOS CITY — Goldenstate College–Gensan wrapped up its five-day Intramurals 2013 with vibrant energy and unforgettable memories, marking one of the most dynamic celebrations in school history. Division 4 (BSHRM) emerged as overall champion, sweeping both sporting and pageant categories.**
+The festivities kicked off with a colorful parade and cheerleading competitions. Division 3 won the Cheerdance and Banner Raising, while Division 4 took home victories in Parade and Banner Design. Sports contests included basketball, volleyball, softball, sepak takraw, chess, table tennis, and soccer.
 
-Held from **September 23–27, 2013**, the annual semestral event took place at the **General Santos City Sports Complex** and **SM City Gensan Trade Hall**, blending intense competition with colorful showcases of talent, intellect, and school pride.
+Days two and three maintained the momentum with ongoing games and lively hosting by Madam Josie and Sir Allan. A standout moment was the Mass Zumba Craze—an unprecedented synchronized dance event involving thousands of students, faculty, and staff.
 
----
+On day four, literary and musical competitions moved to SM City Gensan Trade Hall, featuring quiz bees, spelling bees, extemporaneous speaking, newscasting, vocal performances, dances, ballroom contests, and talent showcases.
 
-## 🏅 Highlights of the Event
+The grand finale was the Mr. & Ms. Goldenstate 2013 pageant, judged by esteemed jurors and hosted by Mr. Ferdinand Alcantara and Mr. Jay Costorio. Both titles were claimed by candidates from Division 4.
 
-- **🏆 Overall Champion**: Division 4 (BSHRM)
-- **🎉 Grand Opening Parade & Cheerdance**: Division 3 dominated Cheerdance; Division 4 won the Parade and Banner Design.
-- **🎭 Literary-Musical Events**: Division 4 shone in Newscasting and Pop Dance.
-- **👑 Mr. & Ms. Goldenstate 2013**: Both winners hailed from Division 4.
-- **💃 Mass Zumba Craze**: Thousands joined a synchronized Zumba performance — the largest in college history.
+In the end, Division 4 was declared the official overall champion of the 2013 Intramurals, underscoring their excellence across academics, sports, and the arts.
 
----
+![Mr. John Ralph T. Manilay officially opens Goldenstate College Intramurals 2013.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-02.jpg)
 
-## 🎽 Sports & Games: Energy from Day One
+![The 200m women’s run heats up the field as divisions compete for gold.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-03.jpg)
 
-The Intrams kicked off with a **colorful parade**, cheerleaders, and loud cheers from all four competing divisions. Competitions on **Day 1** included:
+![Colorful parade kicks off the Intramurals 2013 celebration.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-05.jpg)
 
-- **T-shirt Design** (🏆 Division 3)  
-- **Banner Raising** (🏆 Division 3)  
-- **Banner Design** (🏆 Division 4)  
-- **Parade** (🏆 Division 4)  
-- **Cheerdance** (🏆 Division 3)
+![Energetic students showcase creative banners during the opening parade.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-06.jpg)
 
-In the afternoon, students clashed in major sports like **basketball, volleyball, softball, sepak takraw, chess, table tennis, and soccer**.
+![Cheering squads and performers boost division spirit during the parade.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-07.jpg)
 
----
+![Division 4 performs during the newscasting competition at SM City Gensan Trade Hall.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-09.jpg)
 
-## 🎤 Day 2–3: Nonstop Action and Zumba Craze
+![Division 1 representative sings during the vocal solo competition.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-10.jpg)
 
-**Day 2** brought more action as games continued with electric crowd hosting by **Madam Josie** and **Sir Allan**, who kept energy high while announcing results live.
+![Division 3 participant delivers in the extemporaneous speaking contest.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-instram2014-01.jpg)
 
-A special moment capped **Day 3** with the **Zumba Dance Craze**, where students, faculty, and staff gathered in a unified, synchronized dance — a first in college history.
+![DanceSports competition heats up with skillful routines and elegance.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-instram2014-02.jpg)
 
-> 🧍 *“It was the biggest attended Zumba event Goldenstate has ever seen,”* one faculty member shared.
+![Division 2 brings energy and style to the pop dance competition.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-11.jpg)
 
----
+![Mr. & Ms. Goldenstate 2013 candidates represent their divisions with pride.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-12.jpg)
 
-## 📚 Day 4: Battle of the Brains & Talents
-
-For the first time, the **literary-musical events** were hosted at **SM City Gensan Trade Hall**, led by **Mr. Roger A. Pauya** and the **General Education Department**.
-
-### Literary Events
-- Quiz Bee  
-- Spelling Bee  
-- Extemporaneous Speaking  
-- Newscasting
-
-### Musical Events
-- Vocal Solo & Duet  
-- Pop Dance  
-- Ballroom (Teacher & Student Categories)  
-- Talent Showcase (Mr. & Ms. Goldenstate Candidates)
-
-The venue was filled with tension and excitement as divisions battled with wit, creativity, and charm.
-
----
-
-## 👑 Day 5: The Coronation of Goldenstate’s Finest
-
-The grand finale came with the **Mr. & Ms. Goldenstate 2013 Pageant**, hosted by **Mr. Ferdinand Alcantara** and **Mr. Jay Costorio**. The stylish pageant was judged by esteemed jurors and supported by a high-spirited crowd.
-
-- **👸 Ms. Goldenstate 2013** – Division 4  
-- **🤴 Mr. Goldenstate 2013** – Division 4
-
-Eight female and four male candidates competed, but Division 4 took both crowns in a surprise victory, affirming their overall dominance.
-
----
-
-## 🏁 The Final Verdict
-
-While every division gave their best, **Division 4** rose above the rest and was officially declared **Overall Champion** of the **2013 Goldenstate College–General Santos Intramurals**.
-
----
-
-## 📸 Photo Highlights
-
-![John Ralph Manilay opens College Intramurals 2013](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-02.jpg)  
-![200m women's run among divisions](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-03.jpg)  
-![Parade highlights from the opening program](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-03.jpg)  
-![Parade highlights from the opening program](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-05.jpg)  
-![Parade highlights from the opening program](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-06.jpg)  
-![Parade highlights from the opening program](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-07.jpg)  
-![Division 4 in the newscasting contest](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-09.jpg)  
-![Division 1 in vocal solo](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-10.jpg)  
-![Division 3 in extemporaneous speech](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-instram2014-01.jpg)  
-![DanceSports competition](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-instram2014-02.jpg)  
-![Division 2 in pop dance](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-11.jpg)  
-![Mr. & Ms. Goldenstate 2013 candidates in division shirts](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-12.jpg)  
-![Mr. & Ms. Goldenstate 2013 titleholders](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-13.jpg)
+![Division 4 wins both Mr. & Ms. Goldenstate 2013 titles, sealing their overall championship.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-13.jpg)
