--- a/news/2014/10/04/001.mdx
+++ b/news/2014/10/04/001.mdx
@@ -1,51 +1,46 @@
 ---
-slug: "gsc-honors-its-filipino-language-and-culture-with-its-celebration-of-buwan-ng-wikang-pambansa"
-title: "gsc honors its filipino language and culture with its celebration of buwan ng wikang pambansa"
-description: "Every august, the country celebrates buwan ng wikang pambansa, highlighting our filipino language. the komisyon..."
+slug: "gsc-honors-filipino-language-and-culture-with-buwan-ng-wikang-pambansa-celebration"
+title: "GSC Honors Filipino Language and Culture with Buwan ng Wikang Pambansa Celebration"
+description: "Every August, the Philippines observes Buwan ng Wikang Pambansa to highlight the importance of the..."
 author: "Goldenstate"
 date: "2014/10/04"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/buwan-wika-01.jpg"
 ---
 
-Every august, the country celebrates buwan ng wikang pambansa, highlighting our filipino language. the komisyon ng wikang filipino (kwf) announced that the theme for this year’s celebration would be ‘wikang filipino, wikang pagkakaisa’.
+Every August, the Philippines observes *Buwan ng Wikang Pambansa* to highlight the importance of the Filipino language. This year’s theme, announced by the Komisyon sa Wikang Filipino (KWF), was **“Wikang Filipino, Wikang Pagkakaisa”** (Filipino Language, Language of Unity).
 
-The celebration of buwan ng wikang pambansa is in keeping with presidential proclamation no. 1041 s. 1997 (month long celebration of buwanngwika every august), meant to encourage all filipinos, and especially the youth, to develop their appreciation for their national language by means of participation in all activities in line with the celebration and to embolden their compatriots through emphasizing greater appreciation and understanding on their traditional activities and making their language the heart and light of the nation.
+The month-long celebration is based on Presidential Proclamation No. 1041 (1997), encouraging Filipinos—especially the youth—to deepen their appreciation of the national language through various cultural activities. The initiative also aims to foster pride in Filipino traditions and promote the language as the heart and soul of the nation.
 
-To make all these objectives come to life, goldenstate college, inc. under the supervision of the filipino department, led by head filipino teacher arnold sugan, and with contributions from all departments, organized a two-day festival on august 28 and 29, 2014.
+Goldenstate College, under the Filipino Department led by Arnold Sugan, organized a two-day festival on August 28 and 29, 2014, featuring a wide range of events. These included slogan and poster making contests, essay writing (sanaysay), traditional Filipino games (*larong pinoy*), interpretative and folk dances, poetry recitation (*sabayang bigkasan*), speeches, and solo and duet singing competitions. The celebration culminated with the much-anticipated *Lakandula* and *Lakambining Buwan ng Wika* pageant.
 
-The two-day celebration was comprised of several events, including the slogan and poster making contest, sanaysay making, tagisan at palighasan sa mga tradisyonal na larong pinoy, interpretative dance, folk dance, sabay ang bigkasan, talumpati, solo and duet singing contest, and the highly-anticipated lakandula and lakambining buwan ng wika.
+### Larong Pinoy: Traditional Games Played by Today’s Youth
 
-The activity has proven to be a success in reminding filipinos of the importance of language in achieving national progress. it has reinforced the understanding among our youth that no matter how globalization and colonialism has affected their daily lives it is imperative to value and experience all that is naturally and distinctly filipino.
+Reflecting on childhood, one faculty member shared how their early years were filled with outdoor games like *piko*, *patintero*, *tagu-taguan*, *sungka*, *holen*, *luksong tinik*, *luksong lubid*, and *hiliang lubid*. These games fostered social interaction and cultural roots.
 
-Our coverage of buwan ng wikang pambansa includes features on two particularly important events: the larong pinoy and the lakandula and lakambini.
+In contrast, today’s children often engage with electronic games such as *DOTA* and *Counter Strike*, missing out on physical activity and face-to-face connection. To revive these Filipino traditions, this year’s celebration included an expanded lineup of *larong pinoy* that emphasized teamwork and active participation.
 
-Larong pinoy: traditional games from yesterday played by the youth of today.
+Participants not only enjoyed physical exercise but also nourished their social and moral values, reaffirming the significance of preserving Filipino cultural heritage.
 
-I am one example of a filipino whose formative years were not all about psp and game apps on tablets; i grew up with games played outside of the confines of our house. i grew up with games with lots of interaction with friends, family, and neighbors.
+### BSBA Reigns in Lakandula and Lakambini 2014
 
-In my early formative years we played piko, we socialized by patintero, tagutaguan, sungka and holen and interacted with other children by doing luksongtinik, luksonglubid and hilianglubid. as you can imagine my younger years were not only about socialization but also about the cultivation of a strong, unique culture within me.
+The festival’s highlight was the annual *Lakandula and Lakambining Buwan ng Wika* beauty and brain pageant. This year’s theme celebrated the country’s rich cultural heritage, with contestants donning traditional Filipino costumes.
 
-Now children are playing different games. they sit engrossed, with almost lifeless stares, playing ‘dota’, ‘counter strike’, and many other games found on computers and other electronic platforms. gone are the familiar ways of filipinos. gone is the face-to-face interaction of playing with friends, cousins and relatives. gone is the fun-filled playful afternoon. gone are the philippine traditional games.
+Contestants showcased elegance and cultural pride wearing native attire, then changed into colorful *Filipiniana* and *Barong Tagalog* outfits. The competition ended with a challenging question-and-answer segment, where all candidates impressed the judges.
 
-To help today’s youth remember how things used to be, our buwan ng wika celebration included traditional larong pinoy, which are considered vital to our heritage.
+The titles went to two Bachelor of Science in Business Administration (BSBA) students: Ms. Raquel Dingal, 2nd year, and Mr. Ronnel Jess Langomez, 1st year. Their win embodied the poise, intelligence, and cultural spirit of the ideal Filipino.
 
-This year, the college added significantly more to the number of games that were played, all of which required teamwork and intense physical activity, a departure from just sitting on the couch and pressing the buttons of an xbox or swiping fingers on an ipad.
+### Faculty Show Their Moves
 
-Not only did we get in a good sweat, but we also nourished our hearts and souls. just as they have for generations, these games can serve as a positive influence to our mental, emotional, social and moral being. our traditions and heritage can be revived if our children take up these games all throughout their adolescent and adult lives.
+During the folk dance competition, faculty members surprised many with their dance skills, showing strong participation beyond academics.
 
-Yes, we will have another chance to enjoy larong pinoy next august, but even before then, i hope we can play these games more often.
+### A Climb for the Prize
 
-Bsba reigns in lakandula and lakambini 2014.
+One of the traditional highlights was the *palo sebo*—a slippery bamboo pole climb where a student competed to reach the prize at the top, embodying the spirit of Filipino games and celebration.
 
-To top off this year’s buwan ng wika, goldenstate held its annual beauty- and brain- pageant, ‘lakandula and lakambining buwanng wika.’ this year’s winners were both from the bachelor of science in business adminstration department.
+The festival successfully reminded everyone of the vital role language and culture play in national progress and unity. It also encouraged youth and community members to continue valuing and practicing Filipino traditions despite modern influences.
 
-Our country’s rich cultural heritage was the theme for the event. donning authentic traditional and native costumes, the contestants displayed style and grace as they introduced themselves to the crowd.
+![Who says faculty members can’t do it on the dance floor? here, our instructors show their skills during the folkdance competition.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/buwan-wika-02.jpg)
 
-Afterwards, the contestants changed their outfits to colorful and customary filipiniana- barong tagalog attire. each participant showcased vibrancy with the designs of their garments.
+![He said “easy money,” then met Mr. Palo Sebo.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/buwan-wika-05.jpg)
 
-The competition concluded with the question-and-answer portion. all of the candidates gave very respectable answers, giving the panel of judges difficulty in deciding the winners. ultimately, the titles were awarded to two bsba students– ms. raquel dingal, 2nd year, and mr. ronnel jess langomez, 1st year.
-
-Congratulations to all the participants and mostly to the bsba department for embodying the poise and intelligence of the ideal filipino and filipina.
-
-Who says faculty members can’t do it on the dance floor? here, our instructors show their skills during the folkdance competition.
-
-One student trying to climb a greasy bamboo pole (palo sebo) to get to the price money .
+![When the prize is pride, snacks, and eternal bragging rights at the Tug of War (Hilaan ng Lubid).](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/buwan-wika-04.jpg)
