--- a/news/2014/10/04/002.mdx
+++ b/news/2014/10/04/002.mdx
@@ -1,57 +1,46 @@
 ---
-slug: "goldenstate-works-out-its-bodies-and-minds-during-intramurals-2014"
-title: "goldenstate works out its bodies (and minds) during intramurals 2014"
-description: "Did you notice division 4 is once again the overall champion of intramurals 2014? i..."
+slug: "goldenstate-colleges-division-4-dominates-again-as-intramurals-2014-overall-champion"
+title: "Goldenstate College’s Division 4 Dominates Again as Intramurals 2014 Overall Champion"
+description: "Did you notice Division 4 is once again the overall champion of Intramurals 2014? Sir..."
 author: "Goldenstate"
 date: "2014/10/04"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/intra-2014-01.jpg"
 ---
 
-Did you notice division 4 is once again the overall champion of intramurals 2014? i hear sir. chris mordeno, the division’s adviser, musing about his students having to do their best to win in every activity that they will be participating, deploying all of the students that have the suitable talents and skills for the intramurals.
+Did you notice Division 4 is once again the overall champion of Intramurals 2014? Sir Chris Mordeno, the division’s adviser, shared how his students pushed themselves to their limits, deploying those with the best talents and skills to secure victories across all events.
 
-Goldenstate college’s intramurals was a four-day affair, beginning on monday at the lagao gymnasium with the literary and musical competitions. students representing the four divisions competed in the quiz bowl, spelling bee, extemporaneous speaking, news casting, and solo and duet singing. in the afternoon were the final rounds of the mr. and ms. goldenstate pageants.
+The four-day event began on Monday, September 22, at the Lagao Gymnasium with literary and musical competitions. Students from the four divisions competed in quiz bowl, spelling bee, extemporaneous speaking, newscasting, and solo and duet singing. The afternoon featured the final rounds of the much-anticipated Mr. and Ms. Goldenstate pageants.
 
-The physical competitions were held during the following three days at the acharon sports complex, calumpang. each division displayed exemplary sportsmanship and character while vying for the honor of being named overall champion. though divison 4 would ultimately earn that distinction, it is clear that every competitor gave her or his best effort in front of the large crowd of fellow goldenians who cheered them on.
+Sports competitions took place over the next three days at the Acharon Sports Complex in Calumpang. Each division showcased sportsmanship and determination in basketball, volleyball, kickball, soccer, sepak takraw, tennis, chess, track and field, long jump, and darts. Though competition was fierce, Division 4 ultimately claimed the overall championship amid loud cheers from their fellow Goldenians.
 
-The week was capped off with exhibition games played by the faculty and staff, as well as an all-school zumba workout. the spirit of health and fitness was celebrated by all of goldenstate.
+The week’s festivities concluded with exhibition games between faculty and staff and a lively all-school Zumba workout, celebrating health and fitness across the campus.
 
-“this is the right time to develop good sportsmanship”, chief executive officer (ceo) dr. warren t. manilay, mnsa declared during his opening remarks. truly, during the 2014 intramurals, all goldenians did just that.
+“This is the right time to develop good sportsmanship,” said CEO Dr. Warren T. Manilay, MNSA, during his opening remarks. Throughout the intramurals, all participants exemplified this spirit.
 
-Our coverage of the intramurals includes features on the literary and musical competitions and the mr. and ms. goldenstate pageant, both held at the lagao gymnasium on september 22.
+**A Battle of Brains and Talent**
 
-A battle of brains and vocal range.
+Monday’s literary and musical competitions opened with the quiz bowl, where Division 3 took first place, and the spelling bee, won by Division 4. The extemporaneous speaking and newscasting rounds followed, with Division 4 prevailing despite some technical challenges. The day concluded with solo and duet singing performances, showcasing creativity and resilience from all divisions.
 
-Monday’s literary and musical competitions at the began with quiz bowl followed by spelling bee all divisions performed well, but division three bagged the first place at quiz bowl and division four for spelling bee.
+**“Gods and Goddesses” Shine in Pageant**
 
-Then came the extemporaneous question competition, followed by newscasting. as expected with anything involving multimedia coordination, there were multiple hiccups, but all participants showed their resilience. ultimately, division 4 came out on top.
+The Mr. and Ms. Goldenstate College 2014 pageant, themed “Gods and Goddesses,” was a highlight of the week. Candidates from each division showcased beauty, grace, and wit through various challenges.
 
-The series of competitions ended with solo and duet singing. again, there were some technical setbacks, but the performers persevered with absolute grace and spirit. through all of the competitions, each division showed their fortitude, intelligence, and creativity.
+Pictorials were held on September 14 at the Ancestral House, featuring formal and themed costumes. Talent competitions took place on September 20, and the grand coronation was held on September 23 at Lagao Gymnasium. The event reached a peak when popular guest performers 1:43 serenaded the female contestants, sending the crowd into excitement.
 
-Gods and goddesses among us.
+The question-and-answer segment tested the contestants’ composure and articulation, with all delivering passionate responses.
 
-The mr. and ms. goldenstate college pageant is a perennial highlight of intramurals. themed this year as “gods and goddesses”, representatives from each division went through a series of challenges that test their beauty, grace, and wit in order to prove that they are worth the titles mr. and ms. goldenstate 2014.
+Special awards recognized individual achievements across divisions, with Division 4 candidates winning the Mr. and Ms. Goldenstate titles, as announced by pageant organizer Mr. Ferdinand Alcantara.
 
-On september 14, the candidates had their pictorial at the ancestral house, each looking photogenic in their black-and-white formal and god- and goddess-themed costumes. on september 20, they took to the stage to show their creativity during the talent competition.
+**Sportsmanship Under the Heat**
 
-This all culminated in the evening of september 23 at lagao gymnasium. as their final chance to prove themselves to the judges and the audience, each contestant strutted across the stage during the costume, casual denim attire, and formalwear segments.
+The intramurals sports competitions officially opened under the scorching sun at the Acharon Sports Complex on September 23, lasting until September 25. Athletes showed grit and skill in front of enthusiastic crowds, playing their hearts out in every game.
 
-With all of the female candidates on the stage in their formalwear, the gymnasium went wild when guest performers 1:43 entered to serenade the lovely ladies.
+Despite the heat, the spirit and energy of the players never waned, culminating in Division 4 being declared the overall champions.
 
-This all lead to perhaps the most nerve-wracking portion of the pageant, the q&a. each contestant anwered a randomly selected question, and despite some initial fluster on the faces of some of the candidates, each was able to issue an impassioned and articulate response.
+Goldenstate’s Intramurals 2014 was a triumphant celebration of talent, teamwork, and sportsmanship for students and staff alike.
 
-Before the coronation, a series of special awards were given. both awards for best in talent were given to students from division 1. peoples’ choice were awarded to division 2 (male) and division 4 (female). most photogenic were given to division 3 (male) and division 4 (female). the congeniality awards were given division 1. best in jeans were awarded to division 1 (male) and division 3 (female). students from division 4 were named mr. and ms. coca-cola. mr. and ms. tm were awarded to students from division 2. finally, the metro collection awards were given to students from division 1.
+![Students smile through the heat during the opening of Intramurals 2014 at Acharon Sports Complex.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/intra-2014-02.jpg)
 
-Then came the moment that everyone in lagao gymnasium had been waiting for—the crowning of mr. and ms. goldenstate 2014. with the crowd looking on in rapt anticipation, pageant organizer mr. ferdinand alcantara announced that two students from division 2014 were given the mr. and ms. goldenstate titles.
+![A Division 4 student shows impressive flexibility during the banner presentation.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/intra-2014-03.jpg)
 
-“everyone aims to win, so every athlete do your best to achieve your goals.”.
-
-Officially opened by mr. john manilay, the sports competitions of intramurals 2014 were held at the acharon sports complex from september 23 to 25. teams represent each division competed in various sports, including basketball, volleyball, kickball, soccer, takraw ,tennis, chess, track and field, long jump and darts.
-
-With the oppressive heat of the sun beating down on them, the competitors displayed their athleticism, preparation, grit, and determination in front of the screaming crowd of their peers.
-
-After the three-day series, division 4 earned the title of overall champions. overall, intramurals 2014 was a rousing success, with students and staff alike showing their talent, enthusiasm, and, most importantly, sportsmanship.
-
-They don’t mind the heat of the sun. they are all smiles.
-
-One flexible dude during the banner execution.
-
-A gymnast twirls her ribbon during presentation of the intramural 2014 theme song possible.
+![A gymnast performs with a ribbon during the presentation of the Intramurals 2014 theme song.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/intra-2014-04.jpg)
